--- a/src/main/resources/templates/edit_property.html
+++ b/src/main/resources/templates/edit_property.html
@@ -26,7 +26,7 @@
                         <label class="control-label" for="price">
                             Cena
                         </label>
-                        <input id="price" class="form-control" th:field="*{price}" required autofocus="autofocus">
+                        <input id="price" type="number" class="form-control" th:field="*{price}" required autofocus="autofocus">
                     </div>
 
                     <div class="form-group mt-2">
@@ -159,7 +159,7 @@
                 <p>*Povinné pole</p>
                 <div class="form-group mb-2 mt-2">
                     <label class="control-label" for="img">
-                        Hlavní obrázek
+                        Hlavní obrázek (Max 20MB)
                     </label>
                 </div>
                 <div class="form-group">
