--- a/src/main/resources/templates/create_property.html
+++ b/src/main/resources/templates/create_property.html
@@ -14,6 +14,11 @@
     <form th:action="@{/realman/properties/create}" method="post" th:object="${newProperty}" enctype="multipart/form-data">
         <div class="container">
             <div class="row mt-3">
+                <div class="col-12" th:if="${param.ImgEmpty}">
+                    <div class="alert alert-danger">
+                        Nevybrali jste hlavní obrázek nemovitosti!
+                    </div>
+                </div>
                 <div class="col-md-6">
                     <h3>Základní info</h3>
                     <div class="form-group mt-2">
