--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-3">
-            <div class="row card p-2">
+            <div class="card p-2">
                 <h3>Nadcházející aktivity</h3>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
@@ -32,15 +32,15 @@
                     </li>
                 </ul>
             </div>
-            <div class="row card p-2">
+            <div class="card p-2">
                 <h3>Zprávy</h3>
                 <div class="row mt-2">
                     <div class="col-md-3">
                         <img src="/img/logo.png" alt="profPic" width="50">
                     </div>
                     <div class="col-md-9">
-                        <div class="row fw-bold">Jmeno uzivatele</div>
-                        <div class="row">Zprava uzivatele sasdsadasdasdasdasdas  dasdasds asdasdasd</div>
+                        <p class="fw-bold">Jmeno uzivatele</p>
+                        <p>Zprava uzivatele sasdsadasdasdasdasdas  dasdasds asdasdasd</p>
                     </div>
                 </div>
                 <div class="row mt-2">
@@ -48,8 +48,8 @@
                         <img src="/img/logo.png" alt="profPic" width="50">
                     </div>
                     <div class="col-md-9">
-                        <div class="row fw-bold">Jmeno uzivatele</div>
-                        <div class="row">Zprava uzivatele sasdsadasdasdasdasdas  dasdasds asdasdasd</div>
+                        <p class="fw-bold">Jmeno uzivatele</p>
+                        <p>Zprava uzivatele sasdsadasdasdasdasdas  dasdasds asdasdasd</p>
                     </div>
                 </div>
                 <div class="row mt-2">
@@ -57,8 +57,8 @@
                         <img src="/img/logo.png" alt="profPic" width="50">
                     </div>
                     <div class="col-md-9">
-                        <div class="row fw-bold">Jmeno uzivatele</div>
-                        <div class="row">Zprava uzivatele sasdsadasdasdasdasdas  dasdasds asdasdasd</div>
+                        <p class="fw-bold">Jmeno uzivatele</p>
+                        <p>Zprava uzivatele sasdsadasdasdasdasdas  dasdasds asdasdasd</p>
                     </div>
                 </div>
             </div>
