--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
                     </label>
                     <input id="username" class="form-control" type="text" name="username" placeholder="Zadejte email" autofocus="autofocus">
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <label class="control-label" for="password">
                         Heslo
                     </label>
