--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -38,23 +38,36 @@
                     </label>
                     <input id="firstName" class="form-control" th:field="*{firstName}" required autofocus="autofocus" placeholder="Zadejte jméno">
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <label class="control-label" for="lastName">
                         Příjmení
                     </label>
                     <input id="lastName" class="form-control" th:field="*{lastName}" required autofocus="autofocus" placeholder="Zadejte příjmení">
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <label class="control-label" for="email">
                         Email
                     </label>
                     <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email" placeholder="Zadejte email">
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-2">
                     <label class="control-label" for="password">
                         Heslo
                     </label>
                     <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="8" placeholder="Zadejte heslo">
+                </div>
+                <div class="form-group mt-2">
+                    <p class="mb-2">
+                        Typ účtu
+                    </p>
+                    <label class="control-label" for="User">
+                        Zákazník
+                    </label>
+                    <input id="User" name="accType" value="ROLE_USER" type="radio" th:field="*{role}" required>
+                    <label class="control-label" for="Realman">
+                        Realiťák
+                    </label>
+                    <input id="Realman" name="accType" value="ROLE_REALMAN" type="radio" th:field="*{role}">
                 </div>
 
                 <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
