--- a/src/main/resources/templates/forgot_passwd.html
+++ b/src/main/resources/templates/forgot_passwd.html
@@ -23,11 +23,11 @@
                     <div class="alert alert-info">Úspěšně odesláno</div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group form-floating">
+                    <input id="email" class="form-control" type="text" name="email" th:field="*{email}" required placeholder="Zadejte email" autofocus="autofocus">
                     <label class="control-label" for="email">
                         Email
                     </label>
-                    <input id="email" class="form-control" type="text" name="email" th:field="*{email}" required placeholder="Zadejte email" autofocus="autofocus">
                 </div>
 
                 <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
