--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,17 +22,17 @@
                     <div class="alert alert-info">Úspěšně odhlášeni</div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group form-floating">
+                    <input id="username" class="form-control" type="text" name="username" placeholder="Zadejte email" autofocus="autofocus">
                     <label class="control-label" for="username">
                         Email
                     </label>
-                    <input id="username" class="form-control" type="text" name="username" placeholder="Zadejte email" autofocus="autofocus">
                 </div>
-                <div class="form-group mt-2">
+                <div class="form-group form-floating mt-2">
+                    <input id="password" class="form-control" type="password" name="password" placeholder="Zadejte heslo" autofocus="autofocus">
                     <label class="control-label" for="password">
                         Heslo
                     </label>
-                    <input id="password" class="form-control" type="password" name="password" placeholder="Zadejte heslo" autofocus="autofocus">
                 </div>
 
                 <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
