--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -32,29 +32,35 @@
 
             <h1>Registrace</h1>
             <form th:action="@{/registration}" method="post" th:object="${user}">
-                <div class="form-group">
-                    <label class="control-label" for="firstName">
-                        Jméno
-                    </label>
-                    <input id="firstName" class="form-control" th:field="*{firstName}" required autofocus="autofocus" placeholder="Zadejte jméno">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group mt-2 form-floating">
+                            <input id="firstName" class="form-control" th:field="*{firstName}" required autofocus="autofocus" placeholder="Zadejte jméno">
+                            <label class="control-label" for="firstName">
+                                Jméno
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group mt-2 form-floating">
+                            <input id="lastName" class="form-control" th:field="*{lastName}" required autofocus="autofocus" placeholder="Zadejte příjmení">
+                            <label class="control-label" for="lastName">
+                                Příjmení
+                            </label>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group mt-2">
-                    <label class="control-label" for="lastName">
-                        Příjmení
-                    </label>
-                    <input id="lastName" class="form-control" th:field="*{lastName}" required autofocus="autofocus" placeholder="Zadejte příjmení">
-                </div>
-                <div class="form-group mt-2">
+                <div class="form-group mt-2 form-floating">
+                    <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email" placeholder="Zadejte email">
                     <label class="control-label" for="email">
                         Email
                     </label>
-                    <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email" placeholder="Zadejte email">
                 </div>
-                <div class="form-group mt-2">
+                <div class="form-group mt-2 form-floating">
+                    <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="8" placeholder="Zadejte heslo">
                     <label class="control-label" for="password">
                         Heslo
                     </label>
-                    <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="8" placeholder="Zadejte heslo">
                 </div>
                 <div class="form-group mt-2">
                     <p class="mb-2">
