--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -15,7 +15,10 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
-                            <img th:src="${user.getProfilePicturePath()}" alt="ProfilePic" class="rounded-circle p-1 bg-primary" width="110">
+                            <img th:if="${not #strings.isEmpty(user.profilePicturePath)}" th:src="${user.getProfilePicturePath()}" alt="ProfilePic" class="rounded-circle p-1 bg-primary" width="110">
+                            <i th:unless="${not #strings.isEmpty(user.profilePicturePath)}"
+                               class="fa-solid fa-user"
+                               style="font-size: 50px;"></i>
                             <div class="mt-3">
                                 <h4 th:text="${user.firstName} + ' ' + ${user.lastName}"></h4>
                                 <p class="text-secondary mb-1">TODO Full Stack Developer</p>
