--- a/src/main/resources/templates/forgot_passwd.html
+++ b/src/main/resources/templates/forgot_passwd.html
@@ -10,32 +10,34 @@
 
 <div class="container">
     <div class="row mt-5 mx-1">
-        <div class="col-md-6 offset-md-3 card p-5">
-            <h1>Zapomenuté heslo</h1>
-            <form th:action="@{/forgotPasswd}" method="post" th:object="${user}">
-                <!-- error message -->
-                <div th:if="${param.error}">
-                    <div class="alert alert-danger">Špatný email!</div>
-                </div>
+        <div class="col-md-6 offset-md-3">
+            <div class="card p-5">
+                <h1>Zapomenuté heslo</h1>
+                <form th:action="@{/forgotPasswd}" method="post" th:object="${user}">
+                    <!-- error message -->
+                    <div th:if="${param.error}">
+                        <div class="alert alert-danger">Špatný email!</div>
+                    </div>
 
-                <!-- success message -->
-                <div th:if="${param.success}">
-                    <div class="alert alert-info">Úspěšně odesláno</div>
-                </div>
+                    <!-- success message -->
+                    <div th:if="${param.success}">
+                        <div class="alert alert-info">Úspěšně odesláno</div>
+                    </div>
 
-                <div class="form-group form-floating">
-                    <input id="email" class="form-control" type="text" name="email" th:field="*{email}" required placeholder="Zadejte email" autofocus="autofocus">
-                    <label class="control-label" for="email">
-                        Email
-                    </label>
-                </div>
+                    <div class="form-group form-floating">
+                        <input id="email" class="form-control" type="text" name="email" th:field="*{email}" required placeholder="Zadejte email" autofocus="autofocus">
+                        <label class="control-label" for="email">
+                            Email
+                        </label>
+                    </div>
 
-                <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
-                    <button type="submit" class="btn btn-success">Odeslat</button><br>
-                    <span>Chcete se přihlásit ? <a href="/" th:href="@{/}">Zpět domů</a> </span>
-                </div>
+                    <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
+                        <button type="submit" class="btn btn-primary">Odeslat</button><br>
+                        <span>Chcete se přihlásit ? <a href="/" th:href="@{/}">Zpět domů</a> </span>
+                    </div>
 
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </div>
