--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,39 +9,41 @@
 <div th:replace="fragments/header :: header"></div>
 
 <div class="container">
-    <div class="row mt-5 mx-1">
-        <div class="col-md-6 offset-md-3 card p-5">
-            <h1>Přihlásit se</h1>
-            <form th:action="@{/login}" method="post">
-                <!-- error message -->
-                <div th:if="${param.error}">
-                    <div class="alert alert-danger">Máte špatné buď heslo, jméno, nebo nemáte ověřený účet!</div>
-                </div>
-                <!-- logout message -->
-                <div th:if="${param.logout}">
-                    <div class="alert alert-info">Úspěšně odhlášeni</div>
-                </div>
+    <div class="row mt-5">
+        <div class="col-md-6 offset-md-3">
+            <div class="card p-5">
+                <h1>Přihlásit se</h1>
+                <form th:action="@{/login}" method="post">
+                    <!-- error message -->
+                    <div th:if="${param.error}">
+                        <div class="alert alert-danger">Máte špatné buď heslo, jméno, nebo nemáte ověřený účet!</div>
+                    </div>
+                    <!-- logout message -->
+                    <div th:if="${param.logout}">
+                        <div class="alert alert-info">Úspěšně odhlášeni</div>
+                    </div>
 
-                <div class="form-group form-floating">
-                    <input id="username" class="form-control" type="text" name="username" placeholder="Zadejte email" autofocus="autofocus">
-                    <label class="control-label" for="username">
-                        Email
-                    </label>
-                </div>
-                <div class="form-group form-floating mt-2">
-                    <input id="password" class="form-control" type="password" name="password" placeholder="Zadejte heslo" autofocus="autofocus">
-                    <label class="control-label" for="password">
-                        Heslo
-                    </label>
-                </div>
+                    <div class="form-group form-floating">
+                        <input id="username" class="form-control" type="email" name="username" placeholder="Zadejte email" autofocus="autofocus">
+                        <label class="control-label" for="username">
+                            Email
+                        </label>
+                    </div>
+                    <div class="form-group form-floating mt-2">
+                        <input id="password" class="form-control" type="password" name="password" placeholder="Zadejte heslo" autofocus="autofocus">
+                        <label class="control-label" for="password">
+                            Heslo
+                        </label>
+                    </div>
 
-                <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
-                    <button type="submit" class="btn btn-success">Prihlasit se</button><br>
-                    <span>Nejste registrováni ? <a href="/" th:href="@{/registration}">Registrujte se zde</a> </span>
-                    <span class="mt-2">Zapomněli jste heslo ? <a href="/" th:href="@{/forgotPasswd}">Pokračujte zde</a> </span>
-                </div>
+                    <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
+                        <button type="submit" class="btn btn-primary">Přihlásit se</button><br>
+                        <span>Nejste registrováni ? <a href="/" th:href="@{/registration}">Registrujte se zde</a> </span>
+                        <span class="mt-2">Zapomněli jste heslo ? <a href="/" th:href="@{/forgotPasswd}">Pokračujte zde</a> </span>
+                    </div>
 
-            </form>
+                </form>
+            </div>
         </div>
     </div>
 </div>
