--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -10,77 +10,81 @@
 </div>
 
 <div class="container">
-    <div class="row mt-5 mx-1">
-        <div class="col-md-6 offset-md-3 card p-5">
-            <div th:if="${param.success}">
-                <div class="alert alert-info">
-                    Úspěšně jste se zaregistrovali do naší aplikace, zkontrolujte si email a aktivujte účet!
-                </div>
-            </div>
-
-            <div th:if="${param.error}">
-                <div class="alert alert-danger">
-                    Uživatel je již zaregistrovaný!
-                </div>
-            </div>
-
-            <div th:if="${param.errorPasswd}">
-                <div class="alert alert-danger">
-                    Heslo musí mít minimálně 8 znaků a jedno velké písmeno!
-                </div>
-            </div>
-
-            <h1>Registrace</h1>
-            <form th:action="@{/registration}" method="post" th:object="${user}">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group mt-2 form-floating">
-                            <input id="firstName" class="form-control" th:field="*{firstName}" required autofocus="autofocus" placeholder="Zadejte jméno">
-                            <label class="control-label" for="firstName">
-                                Jméno
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group mt-2 form-floating">
-                            <input id="lastName" class="form-control" th:field="*{lastName}" required autofocus="autofocus" placeholder="Zadejte příjmení">
-                            <label class="control-label" for="lastName">
-                                Příjmení
-                            </label>
-                        </div>
+    <div class="row mt-5 d-flex justify-content-center align-items-center">
+        <div class="col-md-6">
+            <div class="card p-5">
+                <div th:if="${param.success}">
+                    <div class="alert alert-info">
+                        Úspěšně jste se zaregistrovali do naší aplikace, zkontrolujte si email a aktivujte účet!
                     </div>
                 </div>
-                <div class="form-group mt-2 form-floating">
-                    <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email" placeholder="Zadejte email">
-                    <label class="control-label" for="email">
-                        Email
-                    </label>
-                </div>
-                <div class="form-group mt-2 form-floating">
-                    <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="8" placeholder="Zadejte heslo">
-                    <label class="control-label" for="password">
-                        Heslo
-                    </label>
-                </div>
-                <div class="form-group mt-2">
-                    <p class="mb-2">
-                        Typ účtu
-                    </p>
-                    <label class="control-label" for="User">
-                        Zákazník
-                    </label>
-                    <input id="User" name="accType" value="ROLE_USER" type="radio" th:field="*{role}" required>
-                    <label class="control-label" for="Realman">
-                        Realiťák
-                    </label>
-                    <input id="Realman" name="accType" value="ROLE_REALMAN" type="radio" th:field="*{role}">
+
+                <div th:if="${param.error}">
+                    <div class="alert alert-danger">
+                        Uživatel je již zaregistrovaný!
+                    </div>
                 </div>
 
-                <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
-                   <button type="submit" class="btn btn-success">Registrovat se</button>
-                    <span class="mt-3">Už jste registrováni ? <a href="/" th:href="@{/login}">Přihlašte se zde</a> </span>
+                <div th:if="${param.errorPasswd}">
+                    <div class="alert alert-danger">
+                        Heslo musí mít minimálně 8 znaků a jedno velké písmeno!
+                    </div>
                 </div>
-            </form>
+
+                <h1>Registrace</h1>
+                <form th:action="@{/registration}" method="post" th:object="${user}">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group mt-2 form-floating">
+                                <input id="firstName" class="form-control" th:field="*{firstName}" required autofocus="autofocus" placeholder="Zadejte jméno">
+                                <label class="control-label" for="firstName">
+                                    Jméno
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group mt-2 form-floating">
+                                <input id="lastName" class="form-control" th:field="*{lastName}" required autofocus="autofocus" placeholder="Zadejte příjmení">
+                                <label class="control-label" for="lastName">
+                                    Příjmení
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mt-2 form-floating">
+                        <input id="email" class="form-control" th:field="*{email}" required autofocus="autofocus" type="email" placeholder="Zadejte email">
+                        <label class="control-label" for="email">
+                            Email
+                        </label>
+                    </div>
+                    <div class="form-group mt-2 form-floating">
+                        <input id="password" class="form-control" type="password" th:field="*{password}" required autofocus="autofocus" minlength="8" placeholder="Zadejte heslo">
+                        <label class="control-label" for="password">
+                            Heslo
+                        </label>
+                    </div>
+                    <div class="form-group mt-2">
+                        <p class="mb-2">
+                            Typ účtu
+                        </p>
+                        <label class="control-label" for="User">
+                            Zákazník
+                        </label>
+                        <input id="User" name="accType" value="ROLE_USER" type="radio" th:field="*{role}" required>
+                        <label class="control-label" for="Realman">
+                            Realiťák
+                        </label>
+                        <input id="Realman" name="accType" value="ROLE_REALMAN" type="radio" th:field="*{role}">
+                    </div>
+
+                    <div class="form-group mt-4 d-flex justify-content-center align-items-start flex-column">
+                        <button type="submit" class="btn btn-primary">Registrovat se</button>
+                        <span class="mt-3">Už jste registrováni ? <a href="/" th:href="@{/login}">Přihlašte se zde</a> </span>
+                    </div>
+                </form>
+                <hr>
+                <p><small>Registrací souhlasíte se zpracováním osobních údajů</small></p>
+            </div>
         </div>
     </div>
 </div>
