--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -21,10 +21,10 @@
                                style="font-size: 50px;"></i>
                             <div class="mt-3">
                                 <h4 th:text="${user.firstName} + ' ' + ${user.lastName}"></h4>
-                                <p class="text-secondary mb-1">TODO Full Stack Developer</p>
-                                <p class="text-muted font-size-sm">TODO Bay Area, San Francisco, CA</p>
-                                <button class="btn btn-primary">TODO Follow</button>
-                                <button class="btn btn-outline-primary">TODO Message</button>
+                                <p class="text-secondary mb-1">TODO Realitní makléř</p>
+                                <p class="text-muted font-size-sm">TODO Pardubice a okolí</p>
+                                <button class="btn btn-primary">TODO Sledovat</button>
+                                <button class="btn btn-outline-primary">TODO Poslat zprávu</button>
                             </div>
                         </div>
                         <hr class="my-4">
